@@ -1,5 +1,5 @@
 /*
- * "$Id: conf.c,v 1.77.2.46 2003/11/07 19:45:05 mike Exp $"
+ * "$Id: conf.c,v 1.77.2.47 2004/02/05 16:20:12 mike Exp $"
  *
  *   Configuration routines for the Common UNIX Printing System (CUPS).
  *
@@ -673,6 +673,8 @@ ReadConfiguration(void)
     LoadAllPrinters();
     LoadAllClasses();
 
+    CreateCommonData();
+
    /*
     * Load devices and PPDs...
     */
@@ -692,7 +694,11 @@ ReadConfiguration(void)
     LogMessage(L_INFO, "Full reload complete.");
   }
   else
+  {
+    CreateCommonData();
+
     LogMessage(L_INFO, "Partial reload complete.");
+  }
 
  /*
   * Reset the reload state...
@@ -2280,5 +2286,5 @@ CDSAGetServerCerts(void)
 
 
 /*
- * End of "$Id: conf.c,v 1.77.2.46 2003/11/07 19:45:05 mike Exp $".
+ * End of "$Id: conf.c,v 1.77.2.47 2004/02/05 16:20:12 mike Exp $".
  */
